Updated cmake to support packaging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,3 +134,14 @@ INSTALL(FILES
     DESTINATION
     ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
     COMPONENT Devel)
+
+SET(CPACK_GENERATOR TBZ2)
+SET(CPACK_PACKAGE_NAME ${PROJECT_NAME})
+SET(CPACK_PACKAGE_VENDOR "intel")
+SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Implementation of ISO C++ N4659")
+SET(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_SOURCE_DIR}/LICENSE)
+SET(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
+SET(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
+SET(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})
+SET(CPACK_PACKAGE_VERSION_BUILD ${PROJECT_VERSION_TWEAK})
+INCLUDE(CPack)
