Remove builddir from git

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 #########################################################################
 build/*_debug/
 build/*_release/
+build/*
 
 # Compiled source #
 ###################
