Added version generator, ignore generated version file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,12 @@ EXECUTE_PROCESS(
     ERROR_VARIABLE ERROR
     OUTPUT_STRIP_TRAILING_WHITESPACE)
 
+IF(RESULT EQUAL 0)
+    FILE(WRITE ${CMAKE_SOURCE_DIR}/VERSION ${VERSION})
+ELSE(RESULT EQUAL 0)
+    FILE(READ ${CMAKE_SOURCE_DIR}/VERSION VERSION)
+ENDIF(RESULT EQUAL 0)
+
 STRING(
     REGEX
     REPLACE
