Cleanup for CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,153 +1,94 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
+cmake_minimum_required(VERSION 3.1)
 
-SET(BACKEND "tbb" CACHE STRING "Threading backend; defaults to TBB")
-SET(LINKAGE "none" CACHE STRING "Linkage specifying shared, static or header only implementation. Overrides BUILD_SHARED_LIBS. Defaults to header only")
-SET(BUILD_TESTS FALSE CACHE BOOL "Build tests")
-SET(BUILD_EXAMPLES FALSE CACHE BOOL "Build examples")
+# Extract version
+set(PARALLELSTL_VERSION_FILE "include/pstl/internal/pstl_config.h")
+file(STRINGS "${PARALLELSTL_VERSION_FILE}" PARALLELSTL_VERSION_SOURCE REGEX "#define PSTL_VERSION .*$")
+string(REGEX MATCH "#define PSTL_VERSION (.*)$" PARALLELSTL_VERSION_SOURCE "${PARALLELSTL_VERSION_SOURCE}")
+math(EXPR VERSION_MAJOR "${PARALLELSTL_VERSION_SOURCE} / 100")
+math(EXPR VERSION_MINOR "${PARALLELSTL_VERSION_SOURCE} % 100")
 
-# EXTRACT VERSION FROM GIT TAGS
-FIND_PACKAGE(Git)
-EXECUTE_PROCESS(
-    COMMAND
-    ${GIT_EXECUTABLE} describe --tags --dirty 
-    OUTPUT_VARIABLE VERSION
-    RESULT_VARIABLE RESULT
-    ERROR_VARIABLE ERROR
-    OUTPUT_STRIP_TRAILING_WHITESPACE)
+project(ParallelSTL VERSION ${VERSION_MAJOR}.${VERSION_MINOR} LANGUAGES CXX)
 
-IF(RESULT EQUAL 0)
-    FILE(WRITE ${CMAKE_SOURCE_DIR}/VERSION ${VERSION})
-ELSE(RESULT EQUAL 0)
-    FILE(READ ${CMAKE_SOURCE_DIR}/VERSION VERSION)
-ENDIF(RESULT EQUAL 0)
+set(PARALLELSTL_BACKEND "tbb" CACHE STRING "Threading backend; defaults to TBB")
 
-STRING(
-    REGEX
-    REPLACE
-    "^(.*)?-(.*)?-(.*)?"
-    "\\2"
-    VERSION_TWEAK
-    ${VERSION})
+if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
+    set(CMAKE_CXX_STANDARD 11)
+    option(PARALLELSTL_TESTS "Build tests" ON)
+    option(PARALLELSTL_EXAMPLES "Build examples" ON)
+else()
+    option(PARALLELSTL_TESTS "Build tests" OFF)
+    option(PARALLELSTL_EXAMPLES "Build examples" OFF)
+endif()
 
-STRING(
-    REGEX
-    REPLACE
-    "^(.*)?-(.*)?-(.*)?"
-    "\\1"
-    VERSION
-    ${VERSION})
+# Adds the config version helper
+include(CMakePackageConfigHelpers)
 
-STRING(
-    REGEX
-    REPLACE
-    "^([0-9][0-9][0-9][0-9])([0-9][0-9])([0-9][0-9])$"
-    "\\1"
-    VERSION_MAJOR
-    ${VERSION})
+add_library(ParallelSTL INTERFACE)
 
-STRING(
-    REGEX
-    REPLACE
-    "^([0-9][0-9][0-9][0-9])([0-9][0-9])([0-9][0-9])$"
-    "\\2"
-    VERSION_MINOR
-    ${VERSION})
+# Support adding as subdirectory with same syntax as find_package targets
+add_library(pstl::ParallelSTL ALIAS ParallelSTL)
 
-STRING(
-    REGEX
-    REPLACE
-    "^([0-9][0-9][0-9][0-9])([0-9][0-9])([0-9][0-9])$"
-    "\\3"
-    VERSION_PATCH
-    ${VERSION})
+if(PARALLELSTL_BACKEND STREQUAL "tbb")
+    find_package(TBB REQUIRED)
+    target_link_libraries(ParallelSTL INTERFACE tbb)
+else()
+    target_add_definitions(ParallelSTL INTERFACE PSTL_USE_PARALLEL_POLICIES=0)
+endif()
 
-SET(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}.${VERSION_TWEAK}")
-# EXTRACT VERSION FROM GIT TAGS
-
-PROJECT(parallelSTL VERSION ${VERSION} LANGUAGES CXX)
-
-SET(CMAKE_CXX_STANDARD 11)
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__PSTL_TEST_SUCCESSFUL_KEYWORD=1 -fopenmp-simd")
-
-IF(LINKAGE STREQUAL "shared")
-    SET(BUILD_SHARED_LIBS TRUE)
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__PSTL_HEADER_ONLY=0 -D__PSTL_SHARED_LINKAGE")
-ELSEIF(LINKAGE STREQUAL "static")
-    SET(BUILD_SHARED_LIBS FALSE)
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__PSTL_HEADER_ONLY=0")
-ENDIF(LINKAGE STREQUAL "shared")
-
-IF(BACKEND STREQUAL "tbb")
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__PSTL_USE_TBB")
-ENDIF(BACKEND STREQUAL "tbb")
-
-IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DTBB_USE_DEBUG=1")
-ENDIF(CMAKE_BUILD_TYPE STREQUAL "Debug")
-
-INCLUDE(GNUInstallDirs)
-INCLUDE(CMakePackageConfigHelpers)
-INCLUDE(FindPkgConfig)
-
-PKG_CHECK_MODULES(TBB REQUIRED tbb)
-
-ADD_LIBRARY(${PROJECT_NAME} INTERFACE)
-TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}
+target_include_directories(ParallelSTL
     INTERFACE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>
-    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
-TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} INTERFACE LIBRARY_HEADER_ONLY)
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} INTERFACE ${TBB_LIBRARIES})
+    $<INSTALL_INTERFACE:include>)
 
-IF(BUILD_TESTS)
-    ADD_SUBDIRECTORY(test)
-ENDIF(BUILD_TESTS)
+if(PARALLELSTL_TESTS)
+    enable_testing()
+    add_subdirectory(test)
+endif()
 
-IF(BUILD_EXAMPLES)
-    ADD_SUBDIRECTORY(examples)
-ENDIF(BUILD_EXAMPLES)
+if(PARALLELSTL_EXAMPLES)
+    add_subdirectory(examples)
+endif()
 
-INSTALL(
-    TARGETS ${PROJECT_NAME}
-    EXPORT ${PROJECT_NAME}Targets
-    RUNTIME  DESTINATION ${CMAKE_INSTALL_BINDIR}
-    LIBRARY  DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    ARCHIVE  DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+install(
+    TARGETS ParallelSTL
+    EXPORT ParallelSTLTargets
+    INCLUDES DESTINATION include
+    )
 
-INSTALL(
-    EXPORT ${PROJECT_NAME}Targets
-    FILE ${PROJECT_NAME}Targets.cmake
+install(
+    EXPORT ParallelSTLTargets
+    FILE ParallelSTLTargets.cmake
     NAMESPACE pstl::
-    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}/
-    COMPONENT Devel)
+    DESTINATION lib/cmake/ParallelSTL
+    )
 
-INSTALL(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+install(DIRECTORY include DESTINATION include)
 
-WRITE_BASIC_PACKAGE_VERSION_FILE(
-    ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}/${PROJECT_NAME}ConfigVersion.cmake
+write_basic_package_version_file(
+    ${CMAKE_CURRENT_BINARY_DIR}/ParallelSTLConfigVersion.cmake
     VERSION ${PROJECT_VERSION}
     COMPATIBILITY AnyNewerVersion)
 
-CONFIGURE_FILE(
-    cmake/${PROJECT_NAME}Config.cmake
-    ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}/${PROJECT_NAME}Config.cmake
+configure_file(
+    ParallelSTLConfig.cmake.in
+    ${CMAKE_CURRENT_BINARY_DIR}/ParallelSTLConfig.cmake
     @ONLY)
 
-INSTALL(FILES
-    ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}/${PROJECT_NAME}Config.cmake
-    ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}/${PROJECT_NAME}ConfigVersion.cmake
+install(FILES
+    ${CMAKE_CURRENT_BINARY_DIR}/ParallelSTLConfig.cmake
+    ${CMAKE_CURRENT_BINARY_DIR}/ParallelSTLConfigVersion.cmake
     DESTINATION
-    ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
-    COMPONENT Devel)
+    lib/cmake/ParallelSTL
+    )
 
-SET(CPACK_GENERATOR TBZ2)
-SET(CPACK_PACKAGE_NAME ${PROJECT_NAME})
-SET(CPACK_PACKAGE_VENDOR "intel")
-SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Implementation of ISO C++ N4659")
-SET(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_SOURCE_DIR}/LICENSE)
-SET(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
-SET(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
-SET(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})
-SET(CPACK_PACKAGE_VERSION_BUILD ${PROJECT_VERSION_TWEAK})
-INCLUDE(CPack)
+# Allow build directory to work for CMake import
+export(TARGETS ParallelSTL NAMESPACE pstl:: FILE ParallelSTLTargets.cmake)
+export(PACKAGE ParallelSTL)
+
+set(CPACK_PACKAGE_VENDOR "intel")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Implementation of ISO C++ N4659")
+set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_SOURCE_DIR}/LICENSE)
+set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
+set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
+set(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})
+include(CPack)
