--- a/examples/gamma_correction/CMakeLists.txt
+++ b/examples/gamma_correction/CMakeLists.txt
@@ -1,7 +1,2 @@
-ADD_EXECUTABLE(gamma_correction gamma_correction.cpp utils.cpp)
-
-IF(UNIX AND NOT APPLE)
-    TARGET_LINK_LIBRARIES(gamma_correction rt ${PROJECT_NAME})
-ELSE(UNIX AND NOT APPLE)
-    TARGET_LINK_LIBRARIES(gamma_correction ${PROJECT_NAME})
-ENDIF(UNIX AND NOT APPLE)
+add_executable(gamma_correction gamma_correction.cpp utils.cpp)
+target_link_libraries(gamma_correction PUBLIC pstl::ParallelSTL)
