Initial migration of test suite
Structure should conform to libc++ standards
Includes a simple CMake based test driver, based on previous (limited/broken) CMake support

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# -*- mode: gitignore; -*-
+
 # Ignore the debug and release directories created with Makefile builds #
 #########################################################################
 build/*_debug/
@@ -71,6 +73,9 @@ Thumbs.db
 /rules.ninja
 *~
 .emacs.desktop
+*~
+.\#*
+\#*\#
 
 # Build system generated files #
 ################################
