Committing Parallel STL 20190429 open source release

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,9 +16,9 @@ cmake_minimum_required(VERSION 3.1)
 
 set(PARALLELSTL_VERSION_FILE "include/pstl/internal/pstl_config.h")
 file(STRINGS "${PARALLELSTL_VERSION_FILE}" PARALLELSTL_VERSION_SOURCE REGEX "#define PSTL_VERSION .*$")
-string(REGEX MATCH "#define PSTL_VERSION (.*)$" PARALLELSTL_VERSION_SOURCE "${PARALLELSTL_VERSION_SOURCE}")
-math(EXPR VERSION_MAJOR "${CMAKE_MATCH_1} / 100")
-math(EXPR VERSION_MINOR "${CMAKE_MATCH_1} % 100")
+string(REGEX REPLACE "#define PSTL_VERSION (.*)$" "\\1" PARALLELSTL_VERSION_SOURCE "${PARALLELSTL_VERSION_SOURCE}")
+math(EXPR VERSION_MAJOR "${PARALLELSTL_VERSION_SOURCE} / 100")
+math(EXPR VERSION_MINOR "${PARALLELSTL_VERSION_SOURCE} % 100")
 
 project(ParallelSTL VERSION ${VERSION_MAJOR}.${VERSION_MINOR} LANGUAGES CXX)
 
