--- a/.github/workflows/clang-format-pull-request.yml
+++ b/.github/workflows/clang-format-pull-request.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Applying clang-format for changed files
       run: |
         URL="https://api.github.com/repos/${GITHUB_REPOSITORY}/pulls/${{ github.event.pull_request.number }}/files"
-        FILES=$(curl -s --request GET --get $URL |  jq -r '.[] | .filename' | grep ^include)
+        FILES=$(curl -s --request GET --get $URL |  jq -r '.[] | .filename' | grep ^include | grep -v nanorange\.hpp\$)
         echo $FILES | xargs -n1 -t clang-format-6.0 --style=file -i
 
     - name: Creating diff
