--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,20 +26,21 @@ add_custom_target(check-pstl
 
 add_library(test_stdlib INTERFACE)
 target_include_directories(test_stdlib INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/../stdlib")
-target_link_libraries(test_stdlib INTERFACE pstl::ParallelSTL)
+add_library(test_support INTERFACE)
+target_include_directories(test_support INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/pstl_testsuite")
 
 file(GLOB_RECURSE UNIT_TESTS "*.pass.cpp")
 foreach(_file IN LISTS UNIT_TESTS)
-    file(RELATIVE_PATH _target "${CMAKE_CURRENT_SOURCE_DIR}" "${_file}")
-    string(REPLACE ".cpp" "" _target "${_target}")
-    string(REPLACE "/" "-" _target "${_target}")
-    set(_target "pstl-${_target}")
+    get_filename_component(_test_name ${_file} NAME_WE)
 
-    add_executable(${_target} EXCLUDE_FROM_ALL "${_file}")
-    target_include_directories(${_target} PRIVATE "${CMAKE_CURRENT_LIST_DIR}")
-    target_link_libraries(${_target} PRIVATE test_stdlib)
-    set_target_properties(${_target} PROPERTIES CXX_EXTENSIONS NO
-                                                RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")
-    add_test(${_target} "${CMAKE_CURRENT_BINARY_DIR}/${_target}")
-    add_dependencies(pstl-build-tests ${_target})
+    add_executable(${_test_name} "${_file}")
+    target_include_directories(${_test_name} PRIVATE "${CMAKE_CURRENT_LIST_DIR}")
+    target_link_libraries(${_test_name} PRIVATE ParallelSTL test_stdlib test_support)
+    set_target_properties(${_test_name} PROPERTIES CXX_EXTENSIONS NO)
+    if (PARALLELSTL_DEVICE_TYPE)
+        add_test(NAME ${_test_name} COMMAND ${CMAKE_COMMAND} -E env SYCL_DEVICE_TYPE=${PARALLELSTL_DEVICE_TYPE} ${CMAKE_CURRENT_BINARY_DIR}/${_test_name})
+    else()
+        add_test(NAME ${_test_name} COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${_test_name})
+    endif()
+    add_dependencies(pstl-build-tests ${_test_name})
 endforeach()
