--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -34,8 +34,9 @@ foreach(_file IN LISTS UNIT_TESTS)
     get_filename_component(_test_name ${_file} NAME_WE)
 
     add_executable(${_test_name} "${_file}")
+    target_compile_definitions(${_test_name} PRIVATE _PSTL_TEST_SUCCESSFUL_KEYWORD=1)
     target_include_directories(${_test_name} PRIVATE "${CMAKE_CURRENT_LIST_DIR}")
-    target_link_libraries(${_test_name} PRIVATE ParallelSTL test_stdlib test_support)
+    target_link_libraries(${_test_name} PRIVATE oneDPL test_stdlib test_support)
     set_target_properties(${_test_name} PROPERTIES CXX_EXTENSIONS NO)
     if (PARALLELSTL_DEVICE_TYPE)
         add_test(NAME ${_test_name} COMMAND ${CMAKE_COMMAND} -E env SYCL_DEVICE_TYPE=${PARALLELSTL_DEVICE_TYPE} ${CMAKE_CURRENT_BINARY_DIR}/${_test_name})
